html and css demo pages

--- a/index.html
+++ b/index.html
@@ -1,19 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kirana Zero Flow</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>asdfghjnbvdsertgvcdrtg</h1>
-  <h1>asdfghjnbvdsertgvcdrtg</h1>
-  <h1>asdfghjnbvdsertgvcdrtg</h1>
-  <h1>asdfghjnbvdsertgvcdrtg</h1>
-  <h5>rgvcfv</h5>
-  <h1>asdfghjnbvdsertgvcdrtg</h1>
-  <h1>asdfghjnbvdsertgvcdrtg</h1>
-  <h1>asdfghjnbvdsertgvcdrtg</h1>
-  
+    <!-- Header / Navbar -->
+    <header>
+        <div class="logo">Kirana Zero Flow</div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Cart</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero / Welcome section -->
+    <section class="hero">
+        <h1>Welcome to Your Local Kirana Shop!</h1>
+        <p>Shop groceries online quickly and easily.</p>
+        <a href="#products" class="btn">Start Shopping</a>
+    </section>
+
+    <!-- Products section -->
+    <section id="products" class="products">
+        <h2>Our Products</h2>
+        <div class="product-list">
+            <div class="product-card">
+                <h3>Rice</h3>
+                <p>Quality Rice 5kg</p>
+                <span>₹400</span>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-card">
+                <h3>Wheat Flour</h3>
+                <p>Fresh Wheat Flour 2kg</p>
+                <span>₹150</span>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-card">
+                <h3>Cooking Oil</h3>
+                <p>Pure Sunflower Oil 1L</p>
+                <span>₹200</span>
+                <button>Add to Cart</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Kirana Zero Flow. All Rights Reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
