new html and css layout with all pages

--- a/index.html
+++ b/index.html
@@ -2,61 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kirana Zero Flow</title>
+    <title>Shop Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header / Navbar -->
-    <header>
-        <div class="logo">Kirana Zero Flow</div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Cart</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <!-- Hero / Welcome section -->
-    <section class="hero">
-        <h1>Welcome to Your Local Kirana Shop!</h1>
-        <p>Shop groceries online quickly and easily.</p>
-        <a href="#products" class="btn">Start Shopping</a>
-    </section>
+<header>
+    <h1>My Kirana Shop</h1>
+    <p>Your friendly neighborhood store</p>
+</header>
 
-    <!-- Products section -->
-    <section id="products" class="products">
-        <h2>Our Products</h2>
-        <div class="product-list">
-            <div class="product-card">
-                <h3>Rice</h3>
-                <p>Quality Rice 5kg</p>
-                <span>₹400</span>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <h3>Wheat Flour</h3>
-                <p>Fresh Wheat Flour 2kg</p>
-                <span>₹150</span>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <h3>Cooking Oil</h3>
-                <p>Pure Sunflower Oil 1L</p>
-                <span>₹200</span>
-                <button>Add to Cart</button>
-            </div>
-        </div>
-    </section>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="sales.html">Daily Sales</a>
+    <a href="stock.html">Stock List</a>
+    <a href="expenses.html">Expenses</a>
+</nav>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Kirana Zero Flow. All Rights Reserved.</p>
-    </footer>
+<div class="container">
+    <h2>Contact Us</h2>
+    <p>Phone: +91 1234567890</p>
+    <p>Address: Local Market, Pune</p>
 
-    <script src="script.js"></script>
+    <a class="button" href="https://wa.me/911234567890?text=Hello%20Shopkeeper" target="_blank">WhatsApp Us</a>
+
+    <h2>Find Us on Map</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241317.1168561236!2d72.741099!3d19.082197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63f8e2222ff%3A0x0!2sPune!5e0!3m2!1sen!2sin!4v1234567890" allowfullscreen></iframe>
+</div>
+
 </body>
 </html>
+
