convert into phoene

--- a/expences.html
+++ b/expences.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Expenses & Profit</title>
+    <title>Expenses</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-    <h1>Expenses & Profit</h1>
+    Expenses & Profit
 </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="sales.html">Daily Sales</a>
-    <a href="stock.html">Stock List</a>
-    <a href="expenses.html">Expenses</a>
-</nav>
-
 <div class="container">
-    <h2>Enter Expenses</h2>
-    <!-- Embed Google Form for expenses -->
-    <iframe src="YOUR_GOOGLE_FORM_URL_HERE"></iframe>
+    <div class="card">
+        <iframe src="YOUR_EXPENSE_FORM_URL"></iframe>
+    </div>
 
-    <h2>Profit Summary</h2>
-    <!-- Embed Google Sheet with calculations -->
-    <iframe src="YOUR_PUBLISHED_GOOGLE_SHEET_URL_HERE"></iframe>
+    <div class="card">
+        <iframe src="YOUR_PROFIT_SHEET_URL"></iframe>
+    </div>
 </div>
+
+<nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="sales.html">💰 Sales</a>
+    <a href="stock.html">📦 Stock</a>
+    <a href="expenses.html">📊 Expense</a>
+</nav>
 
 </body>
 </html>
+
