--- a/sales.html
+++ b/sales.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Daily Sales</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-    <h1>Daily Sales</h1>
+    Daily Sales
 </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="sales.html">Daily Sales</a>
-    <a href="stock.html">Stock List</a>
-    <a href="expenses.html">Expenses</a>
-</nav>
-
 <div class="container">
-    <h2>Enter Sales</h2>
-    <!-- Embed Google Form for sales here -->
-    <iframe src="YOUR_GOOGLE_FORM_URL_HERE"></iframe>
+    <div class="card">
+        <iframe src="YOUR_GOOGLE_FORM_URL"></iframe>
+    </div>
 </div>
+
+<nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="sales.html">💰 Sales</a>
+    <a href="stock.html">📦 Stock</a>
+    <a href="expenses.html">📊 Expense</a>
+</nav>
 
 </body>
 </html>
+
