--- a/stock.html
+++ b/stock.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Stock List</title>
+    <title>Stock</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
-    <h1>Stock List</h1>
+    Stock List
 </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="sales.html">Daily Sales</a>
-    <a href="stock.html">Stock List</a>
-    <a href="expenses.html">Expenses</a>
-</nav>
-
 <div class="container">
-    <h2>Update & View Stock</h2>
-    <!-- Embed Google Sheet for stock table -->
-    <iframe src="YOUR_PUBLISHED_GOOGLE_SHEET_URL_HERE"></iframe>
+    <div class="card">
+        <iframe src="YOUR_GOOGLE_SHEET_URL"></iframe>
+    </div>
 </div>
+
+<nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="sales.html">💰 Sales</a>
+    <a href="stock.html">📦 Stock</a>
+    <a href="expenses.html">📊 Expense</a>
+</nav>
 
 </body>
 </html>
+
