--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Shop Home</title>
+    <title>Shop App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <h1>My Kirana Shop</h1>
-    <p>Your friendly neighborhood store</p>
+    My Kirana Shop
 </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="sales.html">Daily Sales</a>
-    <a href="stock.html">Stock List</a>
-    <a href="expenses.html">Expenses</a>
-</nav>
-
 <div class="container">
-    <h2>Contact Us</h2>
-    <p>Phone: +91 1234567890</p>
-    <p>Address: Local Market, Pune</p>
 
-    <a class="button" href="https://wa.me/911234567890?text=Hello%20Shopkeeper" target="_blank">WhatsApp Us</a>
+    <div class="card">
+        <p><b>📍 Address:</b> Local Market, Pune</p><br>
+        <p><b>📞 Phone:</b> 1234567890</p>
+    </div>
 
-    <h2>Find Us on Map</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241317.1168561236!2d72.741099!3d19.082197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63f8e2222ff%3A0x0!2sPune!5e0!3m2!1sen!2sin!4v1234567890" allowfullscreen></iframe>
+    <div class="card">
+        <a class="button" href="https://wa.me/911234567890?text=Hello" target="_blank">
+            💬 WhatsApp Shop
+        </a>
+    </div>
+
+    <div class="card">
+        <iframe src="YOUR_GOOGLE_MAP_URL"></iframe>
+    </div>
+
 </div>
+
+<nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="sales.html">💰 Sales</a>
+    <a href="stock.html">📦 Stock</a>
+    <a href="expenses.html">📊 Expense</a>
+</nav>
 
 </body>
 </html>
