added sales google sheet

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </div>
 
     <div class="card">
-        <iframe src="YOUR_GOOGLE_MAP_URL"></iframe>
-    </div>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3722.047833106342!2d78.99886972460288!3d21.110659084961835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1slokmanya%20metro%20station!5e0!3m2!1sen!2sin!4v1766657855754!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
 </div>
 
