--- a/sales.html
+++ b/sales.html
@@ -14,7 +14,7 @@
 
 <div class="container">
     <div class="card">
-        <iframe src="YOUR_GOOGLE_FORM_URL"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/1ZfQrjDXzbLlk57SZs2k-iXEaEWOLq_ZXX1aBeZI1gXA/edit?usp=sharing"></iframe>
     </div>
 </div>
 
