added all google sheets

--- a/expences.html
+++ b/expences.html
@@ -14,13 +14,9 @@
 
 <div class="container">
     <div class="card">
-        <iframe src="YOUR_EXPENSE_FORM_URL"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/1Af9tbqTgGTQ-0MCUAoPIehR-NzhHoR8SBEvkP14JCSc/edit?usp=drive_link"></iframe>
     </div>
 
-    <div class="card">
-        <iframe src="YOUR_PROFIT_SHEET_URL"></iframe>
-    </div>
-</div>
 
 <nav>
     <a href="index.html">🏠 Home</a>
