--- a/stock.html
+++ b/stock.html
@@ -14,7 +14,7 @@
 
 <div class="container">
     <div class="card">
-        <iframe src="YOUR_GOOGLE_SHEET_URL"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/1McyKq8eGgrbpyT1ZnRBgLm6KSbhHw5lEtBOugL_jlu8/edit?usp=sharing"></iframe>
     </div>
 </div>
 
