added expence sheet

--- a/expences.html
+++ b/expences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Expenses</title>
+    <title>Expenses & Profit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,10 +13,13 @@
 </header>
 
 <div class="container">
+
+    <!-- EXPENSE ENTRY FORM -->
     <div class="card">
         <iframe src="https://docs.google.com/spreadsheets/d/1Af9tbqTgGTQ-0MCUAoPIehR-NzhHoR8SBEvkP14JCSc/edit?usp=drive_link"></iframe>
     </div>
 
+</div>
 
 <nav>
     <a href="index.html">🏠 Home</a>
@@ -27,4 +30,3 @@
 
 </body>
 </html>
-
