--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="index.html">🏠 Home</a>
     <a href="sales.html">💰 Sales</a>
     <a href="stock.html">📦 Stock</a>
-    <a href="expenses.html">📊 Expense</a>
+    <a href="kharcha.html">📊 Expense</a>
 </nav>
 
 </body>
