--- a/stock.html
+++ b/stock.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Stock</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Stock</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<header>
-    Stock List
-</header>
+<header>Add Stock</header>
 
 <div class="container">
     <div class="card">
-        <iframe src="https://docs.google.com/spreadsheets/d/1McyKq8eGgrbpyT1ZnRBgLm6KSbhHw5lEtBOugL_jlu8/edit?usp=sharing"></iframe>
+        <input id="productName" placeholder="Product Name"><br><br>
+        <input id="productQty" type="number" placeholder="Quantity"><br><br>
+        <button class="button" onclick="addStock()">Add Stock</button>
     </div>
 </div>
 
 <nav>
-    <a href="index.html">🏠 Home</a>
-    <a href="sales.html">💰 Sales</a>
-    <a href="stock.html">📦 Stock</a>
-    <a href="kharcha.html">📊 Expences</a>
+    <a href="index.html">Stock</a>
+    <a href="add-stock.html">Add</a>
+    <a href="sell.html">Sell</a>
 </nav>
 
+<script src="script.js"></script>
 </body>
 </html>
 
