all new things added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Stock Dashboard</title>
+    <title>Inventory</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="loadDashboard()">
 
-<header>Inventory Dashboard</header>
+<header>Stock Dashboard</header>
 
-<div class="container" id="stockList"></div>
+<div class="container" id="list"></div>
 
 <nav>
     <a href="index.html">Stock</a>
