--- a/sell.html
+++ b/sell.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sell Product</title>
+    <title>Sell</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="loadSellList()">
+<body onload="loadSell()">
 
 <header>Sell Products</header>
 
-<div class="container" id="sellList"></div>
+<div class="container" id="sell"></div>
 
 <nav>
     <a href="index.html">Stock</a>
