--- a/sell.html
+++ b/sell.html
@@ -8,7 +8,17 @@
 
 <header>Sell Products</header>
 
-<div class="container" id="sell"></div>
+<div class="container">
+
+    <input 
+        id="search" 
+        placeholder="Search product..."
+        onkeyup="searchProduct()"
+        style="margin-bottom:12px;"
+    >
+
+    <div id="sell"></div>
+</div>
 
 <nav>
     <a href="index.html">Stock</a>
