cool features added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 <div class="container" id="list"></div>
 
 <nav>
-    <a href="index.html">Stock</a>
-    <a href="add-stock.html">Add</a>
-    <a href="sell.html">Sell</a>
+    <a href="index.html">
+        📦
+        <span>Stock</span>
+    </a>
+    <a href="add-stock.html">
+        ➕
+        <span>Add</span>
+    </a>
+    <a href="sell.html">
+        🛒
+        <span>Sell</span>
+    </a>
 </nav>
+
 
 <script src="script.js"></script>
 </body>
