--- a/add-stock.html
+++ b/add-stock.html
@@ -17,10 +17,20 @@
 </div>
 
 <nav>
-    <a href="index.html">Stock</a>
-    <a href="add-stock.html">Add</a>
-    <a href="sell.html">Sell</a>
+    <a href="index.html">
+        📦
+        <span>Stock</span>
+    </a>
+    <a href="add-stock.html">
+        ➕
+        <span>Add</span>
+    </a>
+    <a href="sell.html">
+        🛒
+        <span>Sell</span>
+    </a>
 </nav>
+
 
 <script src="script.js"></script>
 </body>
