cool features added 3

--- a/add-stock.html
+++ b/add-stock.html
@@ -21,6 +21,8 @@
         📦
         <span>Stock</span>
     </a>
+    <div id="nameSuggestions" class="suggestions"></div>
+
     <a href="add-stock.html">
         ➕
         <span>Add</span>
