--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
     <title>Inventory</title>
+
+    <!-- IMPORTANT -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body onload="loadDashboard()">
+
+<div class="app">
 
 <header>Stock Dashboard</header>
 
@@ -30,12 +36,12 @@
         <div id="stockAlertList"></div>
     </div>
 
-    
-
     <!-- INVENTORY LIST -->
     <div id="list"></div>
 
 </div>
+
+</div> <!-- app end -->
 
 <nav>
     <a href="index.html">
