--- a/sell.html
+++ b/sell.html
@@ -2,27 +2,35 @@
 <html>
 <head>
     <title>Sell</title>
+
+    <!-- REQUIRED FOR MOBILE -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body onload="loadSell()">
+
+<div class="app">
 
 <header>Sell Products</header>
 
 <div class="container">
 
+    <!-- SEARCH INPUT -->
     <input 
-        id="search" 
+        id="searchInput"
         placeholder="Search product..."
-        onkeyup="searchProduct()"
+        oninput="suggestNames(this.value, 'searchSuggestions')"
         style="margin-bottom:12px;"
     >
-    <div id="nameSuggestions" class="suggestions"></div>
 
-    <input id="search" oninput="suggestNames(this.value, 'searchSuggestions')" />
-<div id="searchSuggestions" class="suggestions"></div>
+    <!-- SUGGESTIONS -->
+    <div id="searchSuggestions" class="suggestions"></div>
 
-
+    <!-- SELL LIST -->
     <div id="sell"></div>
+
 </div>
 
 <nav>
@@ -34,12 +42,13 @@
         ➕
         <span>Add</span>
     </a>
-    <a href="sell.html">
+    <a href="sell.html" class="active">
         🛒
         <span>Sell</span>
     </a>
 </nav>
 
+</div> <!-- app -->
 
 <script src="script.js"></script>
 </body>
