--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Stock</title>
+    <title>Stock Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div class="app">
+
 <header>Stock Dashboard</header>
 
 <div class="container">
-    <div class="card dashboard-card">
-        <h3>Total Products</h3>
-        <p id="totalItems">0</p>
+    <div class="dashboard-grid">
+        <div class="card dashboard-card">
+            <h3>Total Products</h3>
+            <p id="totalItems">0</p>
+        </div>
+        <div class="card dashboard-card">
+            <h3>Low Stock</h3>
+            <p id="lowItems">0</p>
+        </div>
+        <div class="card dashboard-card">
+            <h3>Out of Stock</h3>
+            <p id="outItems">0</p>
+        </div>
     </div>
 
-    <div class="card dashboard-card">
-        <h3>Low Stock</h3>
-        <p id="lowItems">0</p>
-    </div>
-
-    <div class="card dashboard-card">
-        <h3>Out of Stock</h3>
-        <p id="outItems">0</p>
-    </div>
-
-    <!-- MAIN BUTTON -->
     <button class="button" onclick="location.href='inventory.html'">
         📋 View All Stock
     </button>
@@ -35,6 +37,8 @@
     <a href="add-stock.html">➕<span>Add</span></a>
     <a href="sell.html">🛒<span>Sell</span></a>
 </nav>
+
+</div> <!-- app -->
 
 <script src="script.js"></script>
 </body>
