--- a/history.html
+++ b/history.html
@@ -4,6 +4,11 @@
     <title>History</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <script type="module">
+        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+        const auth = getAuth();
+        onAuthStateChanged(auth, (user) => { if (!user) window.location.href = "login.html"; });
+    </script>
 </head>
 <body onload="loadHistory()">
 
@@ -11,12 +16,13 @@
 <header>History</header>
 
 <div class="container">
-    <select id="historyFilter" onchange="filterHistory(this.value)">
+    <select id="historyFilter" onchange="loadHistory()">
         <option value="all">All</option>
-        <option value="daily">Today</option>
-        <option value="weekly">This Week</option>
-        <option value="monthly">This Month</option>
+        <option value="daily">Daily</option>
+        <option value="weekly">Weekly</option>
+        <option value="monthly">Monthly</option>
     </select>
+
     <div id="historyList"></div>
 </div>
 
@@ -24,10 +30,10 @@
     <a href="index.html">📦<span>Stock</span></a>
     <a href="add-stock.html">➕<span>Add</span></a>
     <a href="sell.html">🛒<span>Sell</span></a>
-    <a href="history.html" class="active">📜<span>History</span></a>
+    <a class="active" href="history.html">📜<span>History</span></a>
 </nav>
 
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
 </div>
 </body>
 </html>
