--- a/index.html
+++ b/index.html
@@ -5,33 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body onload="loadDashboard()">
 
 <h1>Stock Dashboard</h1>
 <button onclick="logout()">Logout</button>
 
-<!-- Firebase INIT -->
-<script src="firebase.js"></script>
-
-<!-- Auth Protection -->
 <script type="module">
-  import { onAuthStateChanged, signOut }
-  from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-
-  const auth = window.auth;
+  import { auth } from "./firebase.js";
+  import { onAuthStateChanged, signOut } from
+  "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
   onAuthStateChanged(auth, (user) => {
-    if (!user) {
-      window.location.href = "login.html";
-    }
+    if (!user) window.location.href = "login.html";
   });
 
-  window.logout = function () {
-    signOut(auth).then(() => {
-      window.location.href = "login.html";
-    });
+  window.logout = () => {
+    signOut(auth).then(() => window.location.href = "login.html");
   };
 </script>
 
+<script src="script.js"></script>
 </body>
 </html>
