--- a/login.html
+++ b/login.html
@@ -1,61 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kirana Store Login</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-
-    <!-- Firebase -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-
-        const firebaseConfig = {
-          apiKey: "AIzaSyAC4MVFsXVc9AWyKBzDUIUrxjmkcQu6DxE",
-          authDomain: "kirana-store-af039.firebaseapp.com",
-          projectId: "kirana-store-af039",
-          storageBucket: "kirana-store-af039.firebasestorage.app",
-          messagingSenderId: "383514829490",
-          appId: "1:383514829490:web:af7eba443e3b149ca65fab"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth();
-
-        // If already logged in, redirect to dashboard
-        onAuthStateChanged(auth, (user)=>{
-            if(user) window.location.href="index.html";
-        });
-
-        // Login
-        window.loginUser = () => {
-            const email=document.getElementById("email").value;
-            const pass=document.getElementById("password").value;
-            signInWithEmailAndPassword(auth,email,pass)
-            .then(userCredential=>{ window.location.href="index.html"; })
-            .catch(err=>{ alert(err.message); });
-        }
-
-        // Register
-        window.registerUser = () => {
-            const email=document.getElementById("email").value;
-            const pass=document.getElementById("password").value;
-            createUserWithEmailAndPassword(auth,email,pass)
-            .then(userCredential=>{ alert("Account created!"); window.location.href="index.html"; })
-            .catch(err=>{ alert(err.message); });
-        }
-    </script>
+  <title>Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-<div class="app">
-<header>Login / Register</header>
 
-<div class="container">
-    <input type="email" id="email" placeholder="Email"><br><br>
-    <input type="password" id="password" placeholder="Password"><br><br>
-    <button class="button" onclick="loginUser()">Login</button><br><br>
-    <button class="button" onclick="registerUser()">Register</button>
-</div>
-</div>
+<body>
+
+<h2>Login / Register</h2>
+
+<input id="email" placeholder="Email"><br><br>
+<input id="password" type="password" placeholder="Password"><br><br>
+
+<button onclick="login()">Login</button>
+<button onclick="register()">Register</button>
+
+<script type="module">
+  import { auth } from "./firebase.js";
+  import {
+    signInWithEmailAndPassword,
+    createUserWithEmailAndPassword
+  } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+
+  window.login = () => {
+    signInWithEmailAndPassword(
+      auth,
+      email.value,
+      password.value
+    )
+    .then(() => window.location.href = "index.html")
+    .catch(e => alert(e.message));
+  };
+
+  window.register = () => {
+    createUserWithEmailAndPassword(
+      auth,
+      email.value,
+      password.value
+    )
+    .then(() => alert("Account created! Now login"))
+    .catch(e => alert(e.message));
+  };
+</script>
+
 </body>
 </html>
+
